force-app/main/default/objects/Proveedor__c/Proveedor__c.object-meta.xml
<CustomObject>
    <description>Proveedores de Navision</description>
    <label>Proveedor</label>
    <nameField>
        <label>Nombre de Proveedor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proveedores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>