force-app/main/default/objects/Proveedor__c/fields/Actividad_principal__c.field-meta.xml
<CustomField>
    <fullName>Actividad_principal__c</fullName>
    <label>Actividad principal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>