force-app/main/default/objects/Proveedor__c/fields/C_digo__c.field-meta.xml
<CustomField>
    <fullName>C_digo__c</fullName>
    <label>Código</label>
    <length>18</length>
    <type>Text</type>
</CustomField>