force-app/main/default/objects/Proveedor__c/fields/C_digo_postal__c.field-meta.xml
<CustomField>
    <fullName>C_digo_postal__c</fullName>
    <label>Código postal</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>