force-app/main/default/objects/Proveedor__c/fields/Direcci_n_2__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n_2__c</fullName>
    <label>Dirección 2</label>
    <type>TextArea</type>
</CustomField>