force-app/main/default/objects/Proveedor__c/fields/Direcci_n__c.field-meta.xml
<CustomField>
    <fullName>Direcci_n__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>