force-app/main/default/objects/Proveedor__c/fields/Poblaci_n__c.field-meta.xml
<CustomField>
    <fullName>Poblaci_n__c</fullName>
    <label>Población</label>
    <length>255</length>
    <type>Text</type>
</CustomField>