force-app/main/default/objects/Proveedor__c/fields/Proveedor_b_squeda__c.field-meta.xml
<CustomField>
    <fullName>Proveedor_b_squeda__c</fullName>
    <formula>C_digo__c &amp;&quot; &quot;&amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proveedor búsqueda</label>
    <type>Text</type>
</CustomField>