force-app/main/default/objects/Proveedor__c/fields/Tel_fono__c.field-meta.xml
<CustomField>
    <fullName>Tel_fono__c</fullName>
    <label>Teléfono</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>