force-app/main/default/objects/Proveedor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>C_digo__c</columns>
    <columns>Poblaci_n__c</columns>
    <columns>CIF__c</columns>
    <columns>Proveedor_b_squeda__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>es</language>
</ListView>